--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             fuga.
         </p>
     </div>
+    <div>
+        <h3>You to push incremental code </h3>
+        <ul>git add .</ul>
+    </div>
 </body>
 
 </html>
